--- a/composer.json
+++ b/composer.json
@@ -11,12 +11,16 @@
     ],
     "minimum-stability": "stable",
     "require": {
-        "php": ">=7.0"
+        "php": ">=7.0",
+        "symfony/console": "^4.2"
     },
     "autoload": {
         "psr-4": {
             "LLJVCS\\PHPCryptoLib\\": "src/"
         }
     },
-    "prefer-stable": true
+    "prefer-stable": true,
+    "require-dev": {
+        "phpunit/phpunit": "8"
+    }
 }
