--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,9 @@
     "minimum-stability": "stable",
     "require": {
         "php": ">=7.0",
-        "symfony/console": "^4.2"
+        "symfony/console": "^4.2",
+        "phpunit/phpunit": "8",
+        "phplucidframe/console-table": "^1.2"
     },
     "autoload": {
         "psr-4": {
@@ -21,6 +23,5 @@
     },
     "prefer-stable": true,
     "require-dev": {
-        "phpunit/phpunit": "8"
     }
 }
