--- a/.travis.yml
+++ b/.travis.yml
@@ -9,4 +9,4 @@ install:
 script:
   - phpunit --configuration phpunit.xml.dist --coverage-clover=coverage.xml
 after_success:
-  - bash <(curl -s https://codecov.io/bash)>
+  - bash <(curl -s https://codecov.io/bash)
