--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ php:
   - 7.2
   - 7.3
 before_script:
+  - composer update
   - composer dump-autoload -o
 install:
   - composer require phpunit/phpunit ^8
